dockerized project and added map routing